<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.synced.NewStorageActivity"
    android:background="#D3D3D3"
    android:focusable="false"
    android:id="@+id/NewStorageLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_storage"
        android:id="@+id/Name_server_text"
        android:textColor="#ff000000"
        android:layout_alignBottom="@+id/New_add_setup"
        android:layout_toRightOf="@+id/New_add_setup"
        android:layout_toEndOf="@+id/New_add_setup" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/New_add_setup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_add_box_black_24dp"
        android:backgroundTint="#ff657ff5"
        android:contentDescription="@string/add_storage_string" />

    <ImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Storage"
        android:background="@drawable/abc_ic_clear_mtrl_alpha"
        android:contentDescription="@string/exit_app"
        android:focusableInTouchMode="false"
        android:backgroundTint="#ff657ff5"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Exit"
        android:background="@drawable/abc_ic_clear_mtrl_alpha"
        android:contentDescription="@string/exit_app"
        android:focusableInTouchMode="false"
        android:backgroundTint="#ff657ff5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Contact"
        android:background="@drawable/ic_email_black_24dp"
        android:backgroundTint="#ff657ff5"
        android:contentDescription="@string/contact"
        android:layout_alignTop="@+id/Exit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:showAsAction="ifRoom"
        android:title="@string/share_string"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Share"
        android:background="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:backgroundTint="#ff657ff5"
        android:contentDescription="@string/share_button"
        android:cropToPadding="false"
        android:layout_alignTop="@+id/Exit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/Cloud"
        android:background="@drawable/ic_cloud_white_18dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/Name_server_text"
        android:layout_alignRight="@+id/Exit"
        android:layout_alignEnd="@+id/Exit"
        android:contentDescription="@string/cloud" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/User"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/Cloud"
        android:layout_centerHorizontal="true"
        android:editable="true"
        android:textColor="#010101"
        android:hint="@string/user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:layout_marginTop="28dp"
        android:editable="true"
        android:textColor="#010101"
        android:hint="@string/password"
        android:layout_below="@+id/User"
        android:layout_alignLeft="@+id/IPAddress"
        android:layout_alignStart="@+id/IPAddress" />

    <ImageButton
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/Go"
        android:backgroundTint="@android:color/holo_red_light"
        android:contentDescription="@string/go"
        android:src="@android:drawable/star_off"
        android:layout_below="@+id/IPAddress"
        android:layout_alignRight="@+id/IPAddress"
        android:layout_alignEnd="@+id/IPAddress"
        android:layout_marginRight="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IPAddress"
        android:layout_marginTop="38dp"
        android:hint="@string/ip_address"
        android:layout_below="@+id/Password"
        android:layout_alignLeft="@+id/User"
        android:layout_alignStart="@+id/User"
        android:layout_alignRight="@+id/User"
        android:layout_alignEnd="@+id/User"
        android:textColor="#010101"
        android:editable="true"
        android:enabled="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Port"
        android:layout_alignBottom="@+id/Go"
        android:layout_alignRight="@+id/Exit"
        android:layout_alignEnd="@+id/Exit"
        android:layout_alignLeft="@+id/IPAddress"
        android:layout_alignStart="@+id/IPAddress"
        android:hint="@string/port_number"
        android:textColor="#010101"
        android:editable="true"
        android:numeric="integer"
        android:text="@string/default_value_port" />

</RelativeLayout>