<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.synced.ChooseActivity"
    android:background="#c1c1c1"
    android:focusable="false"
    android:id="@+id/ChooseLayout">

    <ImageButton
        android:showAsAction="ifRoom"
        android:title="@string/share_string"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Share"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:backgroundTint="#ff657ff5"
        android:contentDescription="@string/share_button"
        android:cropToPadding="false" />

    <ImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Contact"
        android:background="@drawable/ic_email_black_24dp"
        android:backgroundTint="#ff657ff5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/contact"
        />

    <ImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/Exit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/abc_ic_clear_mtrl_alpha"
        android:contentDescription="@string/exit_app"
        android:focusableInTouchMode="false"
        android:backgroundTint="#ff657ff5" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AddButton"
        android:src="@android:drawable/ic_menu_add"
        android:backgroundTint="#3379d3"
        android:background="#D3D3D3"
        android:contentDescription="@string/add_server"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
